examples/k8s/tercen-worker.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: tercen-worker
  labels:
    app: tercen-worker
spec:
  selector:
    matchLabels:
      name: tercen-worker
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  minReadySeconds: 60
  template:
    metadata:
      labels:
        name: tercen-worker
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - tercen-worker
      volumes:
        - name: tercen-worker-config
          configMap:
            name: tercen-worker-config
        - name: tercen-tmp
          emptyDir: {}
        - name: dockersock
          hostPath:
            path: /var/run/docker.sock
        - name: tercen-data
          persistentVolumeClaim:
            claimName: tercen-data-pvc
        - name: tercen-renv
          persistentVolumeClaim:
            claimName: tercen-renv-pvc
        - name: tercen-operator
          persistentVolumeClaim:
            claimName: tercen-operator-pvc
      containers:
        - name: tercen-worker
          image: tercen/tercen:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5400
              name: tercen
          volumeMounts:
            - name: tercen-worker-config
              mountPath: /etc/tercen
            - name: tercen-tmp
              mountPath: /tmp
            - name: tercen-data
              mountPath: /var/lib/tercen/data
              readOnly: false
            - name: tercen-operator
              mountPath: /var/lib/tercen/data/operator/
              readOnly: false
            - name: dockersock
              mountPath: /var/run/docker.sock
        - name: runtime-r35
          image: tercen/runtime-r35:3.5.3-5
          imagePullPolicy: Always
          volumeMounts:
            - name: tercen-tmp
              mountPath: /tmp
              readOnly: false
            - name: tercen-operator
              mountPath: /var/lib/tercen/data/operator/
              readOnly: false
            - name: tercen-renv
              mountPath: /var/lib/tercen/data/renv/
              readOnly: false
        - name: runtime-r40
          image: tercen/runtime-r40:4.0.4-1
          imagePullPolicy: Always
          volumeMounts:
            - name: tercen-tmp
              mountPath: /tmp
              readOnly: false
            - name: tercen-operator
              mountPath: /var/lib/tercen/data/operator/
              readOnly: false
            - name: tercen-renv
              mountPath: /var/lib/tercen/data/renv/
              readOnly: false
